# GDrive

./: .gitignore  GDrive.py  README.md  pyproject.toml  requirements.txt
src/gdrive/: GDrive.py
src/gdrive/downloadutils/: __init__.py  downloadutils.py  pyproject.toml
src/gdrive/downloadutils/src/downloadutils/: __init__.py
src/gdrive/uploadutils/: __init__.py  pyproject.toml  uploadutils.py
src/gdrive/uploadutils/src/uploadutils/: __init__.py
