[build-system]
requires = ["setuptools>=61.0", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrive"
version = "0.1.0"
description = "A simple command line tool to interact with Google Drive"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "google-api-core==2.24.0",
    "google-api-python-client==2.156.0",
    "google-auth==2.37.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.66.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "oauth2client==4.1.3",
    "proto-plus==1.25.0",
    "protobuf==5.29.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydrive2==1.21.3",
    "pyparsing==3.2.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rsa==4.9",
    "six==1.17.0",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gdrive"]

[project.scripts]
gdrive = "gdrive.GDrive:main"
